--- a/AmbermoonAndroid/AmbermoonAndroid.csproj
+++ b/AmbermoonAndroid/AmbermoonAndroid.csproj
@@ -72,6 +72,7 @@
 		<ProjectReference Include="..\Ambermoon.Common\Ambermoon.Common.csproj" />
 		<ProjectReference Include="..\Ambermoon.Core\Ambermoon.Core.csproj" />
 		<ProjectReference Include="..\Ambermoon.Data.Common\Ambermoon.Data.Common.csproj" />
+		<ProjectReference Include="..\Ambermoon.Data.FileSystems\Ambermoon.Data.FileSystems.csproj" />
 		<ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
 		<ProjectReference Include="..\Ambermoon.Renderer.OpenGL\Ambermoon.Renderer.OpenGL.csproj" />
 	</ItemGroup>
