--- a/AmbermoonAndroid/AmbermoonAndroid.csproj
+++ b/AmbermoonAndroid/AmbermoonAndroid.csproj
@@ -74,6 +74,7 @@
 		<ProjectReference Include="..\Ambermoon.Data.Common\Ambermoon.Data.Common.csproj" />
 		<ProjectReference Include="..\Ambermoon.Data.FileSystems\Ambermoon.Data.FileSystems.csproj" />
 		<ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
+		<ProjectReference Include="..\Ambermoon.Frontend\Ambermoon.Frontend.csproj" />
 		<ProjectReference Include="..\Ambermoon.Renderer.OpenGL\Ambermoon.Renderer.OpenGL.csproj" />
 	</ItemGroup>
 	<ItemGroup>
