--- a/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
+++ b/Ambermoon.Data.GameDataRepository/Ambermoon.Data.GameDataRepository.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>net8.0</TargetFrameworks>
+	<TargetFrameworks>net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<Version>0.1.2</Version>
