--- a/Ambermoon.Audio.Android/Ambermoon.Audio.Android.csproj
+++ b/Ambermoon.Audio.Android/Ambermoon.Audio.Android.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-android</TargetFramework>
+    <TargetFramework>net9.0-android35.0</TargetFramework>
 	<SupportedOSPlatformVersion>30</SupportedOSPlatformVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
