--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ for:
     branches:
         only:
             - master
-            - /v\d+\.\d+\.\d+/
+            - /^v\d+\.\d+\.\d+$/
 
     image:
         - Visual Studio 2022
@@ -19,7 +19,7 @@ for:
 -
     branches:
         only:
-            - /android-v\d+\.\d+\.\d+/
+            - /^android-v\d+\.\d+\.\d+$/
 
     image:
         - Visual Studio 2022
@@ -31,7 +31,7 @@ configuration: Release
 
 before_build:
   - ps: |
-      if ($env:APPVEYOR_REPO_BRANCH -match 'android-v\d+\.\d+\.\d+') {
+      if ($env:APPVEYOR_REPO_BRANCH -match '^android-v\d+\.\d+\.\d+$') {
         dotnet workload install android
         dotnet restore AmbermoonAndroid/AmbermoonAndroid.csproj
       } else {
@@ -62,7 +62,7 @@ artifacts:
 
 after_build:
     - ps: |
-        if ($env:APPVEYOR_REPO_BRANCH -match 'android-v\d+\.\d+\.\d+') {
+        if ($env:APPVEYOR_REPO_BRANCH -match '^android-v\d+\.\d+\.\d+$') {
           dotnet publish --no-restore AmbermoonAndroid/AmbermoonAndroid.csproj -c Release -f net9.0-android35.0 -p:DefineConstants="GLES" -p:AndroidPackageFormat=apk
           Copy-Item "./Ambermoon.Android/bin/Any CPU/Release/net9.0-android35.0/publish/com.pyrdacor.AmbermoonAndroid.apk" "com.pyrdacor.AmbermoonAndroid.apk"
         } else {
@@ -88,6 +88,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
+      APPVEYOR_REPO_TAG_NAME: /^v\d+\.\d+\.\d+$/
   - provider: GitHub
     name: Ambermoon.net-Windows32Bit
     artifact: Ambermoon.net-Windows32Bit
@@ -101,6 +102,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
+      APPVEYOR_REPO_TAG_NAME: /^v\d+\.\d+\.\d+$/
   - provider: GitHub
     name: Ambermoon.net-Linux
     artifact: Ambermoon.net-Linux
@@ -114,6 +116,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
+      APPVEYOR_REPO_TAG_NAME: /^v\d+\.\d+\.\d+$/
   - provider: GitHub
     name: Ambermoon.net-Mac
     artifact: Ambermoon.net-Mac
@@ -127,6 +130,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
+      APPVEYOR_REPO_TAG_NAME: /^v\d+\.\d+\.\d+$/
   - provider: GitHub
     name: Ambermoon.net-Mac-ARM
     artifact: Ambermoon.net-Mac-ARM
@@ -140,6 +144,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
+      APPVEYOR_REPO_TAG_NAME: /^v\d+\.\d+\.\d+$/
   - provider: GitHub
     name: AmbermoonInstaller
     artifact: AmbermoonInstaller
@@ -153,6 +158,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
+      APPVEYOR_REPO_TAG_NAME: /^v\d+\.\d+\.\d+$/
   - provider: GitHub
     name: Ambermoon.net-Mac-ARM Test
     artifact: Ambermoon.net-Mac-ARM
@@ -178,7 +184,7 @@ deploy:
     force_update: true
     on:
       APPVEYOR_REPO_TAG: true
-      APPVEYOR_REPO_TAG_NAME: /android-v\d+\.\d+\.\d+/
+      APPVEYOR_REPO_TAG_NAME: /^android-v\d+\.\d+\.\d+$/
   - provider: NuGet
     name: NugetPackages
     api_key:
